@@ -7,10 +7,10 @@ import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_AAC;
 import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_H264;
 import static org.bytedeco.ffmpeg.global.avcodec.AV_CODEC_ID_VP8;
 import static org.bytedeco.ffmpeg.global.avcodec.AV_PKT_FLAG_KEY;
-
+import static org.bytedeco.ffmpeg.global.avformat.AVFMT_NOFILE;
 import static org.bytedeco.ffmpeg.global.avformat.av_read_frame;
 import static org.bytedeco.ffmpeg.global.avformat.av_stream_get_side_data;
-import static org.bytedeco.ffmpeg.global.avformat.avformat_alloc_output_context2;
+import static org.bytedeco.ffmpeg.global.avformat.*;
 import static org.bytedeco.ffmpeg.global.avformat.avformat_close_input;
 import static org.bytedeco.ffmpeg.global.avformat.avformat_find_stream_info;
 import static org.bytedeco.ffmpeg.global.avformat.avformat_free_context;
@@ -24,7 +24,6 @@ import static org.bytedeco.ffmpeg.global.avutil.AV_PIX_FMT_YUV420P;
 import static org.bytedeco.ffmpeg.global.avutil.AV_SAMPLE_FMT_FLTP;
 import static org.bytedeco.ffmpeg.global.avutil.av_channel_layout_default;
 import static org.bytedeco.ffmpeg.global.avutil.av_dict_get;
-import static org.bytedeco.ffmpeg.global.avutil.av_get_default_channel_layout;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
@@ -59,18 +58,15 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Queue;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-
-import net.sf.ehcache.util.concurrent.ConcurrentHashMap;
 
 import org.apache.commons.codec.binary.Hex;
 import org.apache.commons.lang3.RandomUtils;
 import org.apache.mina.core.buffer.IoBuffer;
 import org.apache.mina.core.buffer.SimpleBufferAllocator;
-import org.apache.tika.io.IOUtils;
 import org.awaitility.Awaitility;
 import org.bytedeco.ffmpeg.avcodec.AVBSFContext;
 import org.bytedeco.ffmpeg.avcodec.AVCodecContext;
@@ -108,8 +104,6 @@ import org.red5.io.flv.impl.Tag;
 import org.red5.server.api.scope.IScope;
 import org.red5.server.api.stream.IStreamCapableConnection;
 import org.red5.server.api.stream.IStreamPacket;
-import org.red5.server.net.protocol.RTMPDecodeState;
-import org.red5.server.net.rtmp.RTMPConnection;
 import org.red5.server.net.rtmp.RTMPMinaConnection;
 import org.red5.server.net.rtmp.codec.RTMP;
 import org.red5.server.net.rtmp.codec.RTMPProtocolDecoder;
@@ -134,10 +128,8 @@ import io.antmedia.RecordType;
 import io.antmedia.datastore.db.DataStore;
 import io.antmedia.datastore.db.DataStoreFactory;
 import io.antmedia.datastore.db.InMemoryDataStore;
-import io.antmedia.datastore.db.MapDBStore;
 import io.antmedia.datastore.db.types.Broadcast;
 import io.antmedia.datastore.db.types.Endpoint;
-import io.antmedia.datastore.db.types.StreamInfo;
 import io.antmedia.integration.AppFunctionalV2Test;
 import io.antmedia.integration.MuxingTest;
 import io.antmedia.muxer.HLSMuxer;
@@ -160,7 +152,6 @@ import io.antmedia.storage.AmazonS3StorageClient;
 import io.antmedia.storage.StorageClient;
 import io.antmedia.test.utils.VideoInfo;
 import io.antmedia.test.utils.VideoProber;
-import io.netty.handler.codec.DecoderException;
 import io.vertx.core.Vertx;
 import org.springframework.test.util.ReflectionTestUtils;
 
@@ -168,6 +159,7 @@ import org.springframework.test.util.ReflectionTestUtils;
 //@ContextConfiguration(classes = {AppConfig.class})
 @DirtiesContext(classMode = ClassMode.AFTER_CLASS)
 public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
+
 
 	protected static Logger logger = LoggerFactory.getLogger(MuxerUnitTest.class);
 	protected static final int BUFFER_SIZE = 10240;
@@ -199,7 +191,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 	public static void beforeClass() {
 		//avformat.av_register_all();
 		avformat.avformat_network_init();
-		avutil.av_log_set_level(avutil.AV_LOG_INFO);
+		avutil.av_log_set_level(avutil.AV_LOG_ERROR);
 	}
 
 	@Before
@@ -323,6 +315,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 	}
 
+
 	@Test
 	public void testAddExtradata() {
 		Mp4Muxer mp4Muxer = new Mp4Muxer(Mockito.mock(StorageClient.class), vertx, "");
@@ -365,7 +358,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		AVCodecParameters codecParameters = new AVCodecParameters();
 		codecParameters.codec_id(AV_CODEC_ID_H264);
 		codecParameters.codec_type(AVMEDIA_TYPE_VIDEO);
-		AVBSFContext avbsfContext = mp4Muxer.initVideoBitstreamFilter(codecParameters, Muxer.avRationalTimeBase);
+		AVBSFContext avbsfContext = mp4Muxer.initVideoBitstreamFilter("h264_mp4toannexb", codecParameters, Muxer.avRationalTimeBase);
 		assertNotNull(avbsfContext);
 
 
@@ -525,19 +518,19 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 
 		logger.info("codecpar.bit_rate(): {}\n" +
-				"		codecpar.bits_per_coded_sample(): {} \n" +
-				"		codecpar.bits_per_raw_sample(): {} \n" +
-				"		codecpar.block_align(): {}\n" +
-				"		codecpar.channel_layout(): {}\n" +
-				"		codecpar.channels(): {}\n" +
-				"		codecpar.codec_id(): {}\n" +
-				"		codecpar.codec_tag(): {}\n" +
-				"		codecpar.codec_type(): {} \n" +
-				"		codecpar.format(): {}\n" +
-				"		codecpar.frame_size():{} \n" +
-				"		codecpar.level():{} \n" +
-				"		codecpar.profile():{} \n" +
-				"		codecpar.sample_rate(): {}",
+						"		codecpar.bits_per_coded_sample(): {} \n" +
+						"		codecpar.bits_per_raw_sample(): {} \n" +
+						"		codecpar.block_align(): {}\n" +
+						"		codecpar.channel_layout(): {}\n" +
+						"		codecpar.channels(): {}\n" +
+						"		codecpar.codec_id(): {}\n" +
+						"		codecpar.codec_tag(): {}\n" +
+						"		codecpar.codec_type(): {} \n" +
+						"		codecpar.format(): {}\n" +
+						"		codecpar.frame_size():{} \n" +
+						"		codecpar.level():{} \n" +
+						"		codecpar.profile():{} \n" +
+						"		codecpar.sample_rate(): {}",
 
 				codecpar.bit_rate(),
 				codecpar.bits_per_coded_sample(),
@@ -565,10 +558,10 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 
 					logger.info("		pkt.duration():{} \n" +
-							"					pkt.flags(): {} \n" +
-							"					pkt.pos(): {}\n" +
-							"					pkt.size(): {}\n" +
-							"					pkt.stream_index():{} ",
+									"					pkt.flags(): {} \n" +
+									"					pkt.pos(): {}\n" +
+									"					pkt.size(): {}\n" +
+									"					pkt.stream_index():{} ",
 							pkt.duration(),
 							pkt.flags(),
 							pkt.pos(),
@@ -697,7 +690,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 
 		HLSMuxer hlsMuxer = new HLSMuxer(vertx, Mockito.mock(StorageClient.class), "streams", 0, "http://example.com", false);
-		hlsMuxer.setHlsParameters(null, null, null, null, null);
+		hlsMuxer.setHlsParameters(null, null, null, null, null, null);
 		hlsMuxer.init(appScope, "test", 0, null, 0);
 		hlsMuxer.addStream(codecParameters, rat, 50);
 		assertTrue(hlsMuxer.getRegisteredStreamIndexList().contains(50));
@@ -707,6 +700,133 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		RtmpMuxer rtmpMuxer = new RtmpMuxer("any_url", vertx);
 		rtmpMuxer.init(appScope, "test", 0, null, 0);
 		rtmpMuxer.addStream(codecParameters, rat, 50);
+
+	}
+
+	@Test
+	public void testRecordMuxerS3Prefix() {
+		String s3Prefix = RecordMuxer.getS3Prefix("s3", null);
+		assertEquals("s3/", s3Prefix);
+
+		s3Prefix = RecordMuxer.getS3Prefix("s3", "test");
+		assertEquals("s3/test/", s3Prefix);
+
+		s3Prefix = RecordMuxer.getS3Prefix("s3/", "test/");
+		assertEquals("s3/test/", s3Prefix);
+	}
+
+	@Test
+	public void testHLSMuxerGetOutputURLAndSegmentFilename() {
+
+		appScope = (WebScope) applicationContext.getBean("web.scope");
+		vertx = (Vertx) appScope.getContext().getApplicationContext().getBean(IAntMediaStreamHandler.VERTX_BEAN_NAME);
+
+
+		{
+			HLSMuxer hlsMuxer = new HLSMuxer(vertx, Mockito.mock(StorageClient.class), "streams", 0, "http://example.com", false);
+			String streamId = "streamId";
+			String subFolder = "subfolder";
+
+			hlsMuxer.init(appScope, streamId, 0, subFolder, 0);
+
+
+			assertEquals("http://example.com/" + subFolder + "/" + streamId + ".m3u8", hlsMuxer.getOutputURL());
+			assertEquals("http://example.com/" + subFolder + "/" + streamId + "%09d.ts", hlsMuxer.getSegmentFilename());
+
+		}
+
+		{
+			//add trailer slash
+			HLSMuxer hlsMuxer = new HLSMuxer(vertx, Mockito.mock(StorageClient.class), "streams", 0, "http://example.com/", false);
+			String streamId = "streamId";
+			String subFolder = "subfolder/";
+
+			hlsMuxer.init(appScope, streamId, 0, subFolder, 0);
+
+
+			assertEquals("http://example.com/" + subFolder + streamId + ".m3u8", hlsMuxer.getOutputURL());
+			assertEquals("http://example.com/" + subFolder + streamId + "%09d.ts", hlsMuxer.getSegmentFilename());
+
+		}
+
+		{
+			StorageClient storageClient = Mockito.mock(StorageClient.class);
+			Mockito.when(storageClient.isEnabled()).thenReturn(true);
+
+
+			HLSMuxer hlsMuxer = Mockito.spy(new HLSMuxer(vertx, storageClient, "streams/", 0b010, null, false));
+			String streamId = "streamId";
+			String subFolder = "subfolder/";
+
+			hlsMuxer.setHlsParameters("1", "1", null, null, null, null);
+			
+			File[] file = new File[1];
+			file[0] = Mockito.mock(File.class);
+			Mockito.when(file[0].exists()).thenReturn(true);
+			Mockito.when(file[0].getName()).thenReturn(streamId + ".m3u8");
+
+			Mockito.doReturn(file).when(hlsMuxer).getHLSFilesInDirectory(Mockito.anyString());
+
+			hlsMuxer.init(appScope, streamId, 0, subFolder, 0);
+
+
+			hlsMuxer.writeTrailer();
+
+			Mockito.verify(storageClient, Mockito.timeout(2000)).save("streams/subfolder/" + streamId + ".m3u8", file[0], true);
+
+		}
+
+		{
+			StorageClient storageClient = Mockito.mock(StorageClient.class);
+			Mockito.when(storageClient.isEnabled()).thenReturn(true);
+
+
+			HLSMuxer hlsMuxer = Mockito.spy(new HLSMuxer(vertx, storageClient, "streams", 0b010, null, false));
+			String streamId = "streamId";
+			String subFolder = "subfolder";
+
+			hlsMuxer.setHlsParameters("1", "1", null, null, null, null);
+			
+			File[] file = new File[1];
+			file[0] = Mockito.mock(File.class);
+			Mockito.when(file[0].exists()).thenReturn(true);
+			Mockito.when(file[0].getName()).thenReturn(streamId + ".m3u8");
+
+			Mockito.doReturn(file).when(hlsMuxer).getHLSFilesInDirectory(Mockito.anyString());
+
+			hlsMuxer.init(appScope, streamId, 0, subFolder, 0);
+
+
+			hlsMuxer.writeTrailer();
+
+			Mockito.verify(storageClient, Mockito.timeout(2000)).save("streams/subfolder/" + streamId + ".m3u8", file[0], true);
+
+		}
+
+		{
+			StorageClient storageClient = Mockito.mock(StorageClient.class);
+			Mockito.when(storageClient.isEnabled()).thenReturn(true);
+
+
+			HLSMuxer hlsMuxer = Mockito.spy(new HLSMuxer(vertx, storageClient, "streams", 0b010, null, false));
+			String streamId = "streamId";
+			hlsMuxer.setHlsParameters("1", "1", null, null, null, null);
+			
+			File[] file = new File[1];
+			file[0] = Mockito.mock(File.class);
+			Mockito.when(file[0].exists()).thenReturn(true);
+			Mockito.when(file[0].getName()).thenReturn(streamId + ".m3u8");
+
+			Mockito.doReturn(file).when(hlsMuxer).getHLSFilesInDirectory(Mockito.anyString());
+
+			hlsMuxer.init(appScope, streamId, 0, null, 0);
+
+
+			hlsMuxer.writeTrailer();
+
+			Mockito.verify(storageClient, Mockito.timeout(2000)).save("streams/" + streamId + ".m3u8", file[0], true);
+
+		}
 
 	}
 
@@ -748,19 +868,19 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		ReflectionTestUtils.setField(muxAdaptor, "statusMap", statusMap);
 		Mockito.doReturn(null).when(muxAdaptor).getRtmpMuxer(rtmpUrl);
 
-		Mockito.doReturn(null).when(statusMap).getValueOrDefault(rtmpUrl, null);
+		Mockito.doReturn(null).when(statusMap).getOrDefault(rtmpUrl, null);
 		assertTrue(muxAdaptor.stopRtmpStreaming(rtmpUrl, resolution).isSuccess());
 
-		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_ERROR).when(statusMap).getValueOrDefault(rtmpUrl, null);
+		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_ERROR).when(statusMap).getOrDefault(rtmpUrl, null);
 		assertTrue(muxAdaptor.stopRtmpStreaming(rtmpUrl, resolution).isSuccess());
 
-		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_FAILED).when(statusMap).getValueOrDefault(rtmpUrl, null);
+		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_FAILED).when(statusMap).getOrDefault(rtmpUrl, null);
 		assertTrue(muxAdaptor.stopRtmpStreaming(rtmpUrl, resolution).isSuccess());
 
-		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_FINISHED).when(statusMap).getValueOrDefault(rtmpUrl, null);
+		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_FINISHED).when(statusMap).getOrDefault(rtmpUrl, null);
 		assertTrue(muxAdaptor.stopRtmpStreaming(rtmpUrl, resolution).isSuccess());
 
-		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_BROADCASTING).when(statusMap).getValueOrDefault(rtmpUrl, null);
+		Mockito.doReturn(IAntMediaStreamHandler.BROADCAST_STATUS_BROADCASTING).when(statusMap).getOrDefault(rtmpUrl, null);
 		assertFalse(muxAdaptor.stopRtmpStreaming(rtmpUrl, resolution).isSuccess());
 	}
 
@@ -919,11 +1039,15 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		RtmpMuxer rtmpMuxer = Mockito.spy(new RtmpMuxer(null, vertx));
 
-		AVFormatContext context = new AVFormatContext(null);
+		AVFormatContext context = new AVFormatContext();
 		int ret = avformat_alloc_output_context2(context, null, "flv", "test.flv");
 
-
+		//rtmpMuxer.set
 		AVPacket pkt = av_packet_alloc();
+
+		appScope = (WebScope) applicationContext.getBean("web.scope");
+
+		rtmpMuxer.init(appScope, "", 0, "", 0);
 
 		rtmpMuxer.avWriteFrame(pkt, context);
 
@@ -1122,6 +1246,71 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		//This is for testing writeHeader after writeTrailer.
 		rtmpMuxer.writeHeader();
+	}
+
+	@Test
+	public void testRtmpUrlWithoutAppName() {
+		{
+			RtmpMuxer rtmpMuxer = Mockito.spy(new RtmpMuxer("rtmp://a.rtmp.youtube.com/y8qd-42g5-1b53-fh15-2v0", vertx)); //RTMP URl without Appname
+			AVDictionary opt = rtmpMuxer.getOptionDictionary();
+			AVDictionaryEntry optEntry = av_dict_get(opt, "rtmp_app", null, 0);
+			assertEquals("rtmp_app", optEntry.key().getString());
+			assertEquals("", optEntry.value().getString());
+		}
+
+
+		{
+			RtmpMuxer rtmpMuxer = Mockito.spy(new RtmpMuxer("rtmp://a.rtmp.youtube.com/y8qd-42g5-1b53-fh15-2v0/test", vertx)); //RTMP URl without Appname
+			AVDictionary opt = rtmpMuxer.getOptionDictionary();
+			AVDictionaryEntry optEntry = av_dict_get(opt, "rtmp_app", null, 0);
+			assertNull(optEntry);
+
+			//if it's different from zero, it means no file is need to be open.
+			//If it's zero, Not "no file" and it means that file is need to be open .
+			assertEquals(0, rtmpMuxer.getOutputFormatContext().oformat().flags() & AVFMT_NOFILE);
+
+
+			rtmpMuxer.clearResource();
+		}
+
+		{
+			RtmpMuxer rtmpMuxer = Mockito.spy(new RtmpMuxer("rtmps://a.rtmp.youtube.com/y8qd-42g5-1b53-fh15-2v0", vertx)); //RTMP URl without Appname
+			AVDictionary opt = rtmpMuxer.getOptionDictionary();
+			AVDictionaryEntry optEntry = av_dict_get(opt, "rtmp_app", null, 0);
+			assertEquals("rtmp_app", optEntry.key().getString());
+			assertEquals("", optEntry.value().getString());
+
+		}
+
+		{
+			RtmpMuxer rtmpMuxer = Mockito.spy(new RtmpMuxer("rtmps://a.rtmp.youtube.com/y8qd-42g5-1b53-fh15-2v0/test", vertx)); //RTMP URl without Appname
+			AVDictionary opt = rtmpMuxer.getOptionDictionary();
+			AVDictionaryEntry optEntry = av_dict_get(opt, "rtmp_app", null, 0);
+			assertNull(optEntry);
+
+			//if it's different from zero, it means no file is need to be open.
+			//If it's zero, Not "no file" and it means that file is need to be open .
+			assertEquals(0, rtmpMuxer.getOutputFormatContext().oformat().flags() & AVFMT_NOFILE);
+
+
+			rtmpMuxer.clearResource();
+
+		}
+
+		{
+			RtmpMuxer rtmpMuxer = Mockito.spy(new RtmpMuxer("rtmps://live-api-s.facebook.com:443/rtmp/y8qd-42g5-1b53-fh15-2v0", vertx)); //RTMP URl without Appname
+			AVDictionary opt = rtmpMuxer.getOptionDictionary();
+			AVDictionaryEntry optEntry = av_dict_get(opt, "rtmp_app", null, 0);
+			assertNull(optEntry);
+
+			//if it's different from zero, it means no file is need to be open.
+			//If it's zero, Not "no file" and it means that file is need to be open .
+			assertEquals(0, rtmpMuxer.getOutputFormatContext().oformat().flags() & AVFMT_NOFILE);
+
+
+			rtmpMuxer.clearResource();
+		}
+
 	}
 
 	@Test
@@ -1608,9 +1797,9 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		long activeBroadcastCountFinal = activeBroadcastCount;
 		Awaitility.await().atMost(5, TimeUnit.SECONDS).pollInterval(1, TimeUnit.SECONDS)
-		.until(() -> {
-			return activeBroadcastCountFinal + 2 == appAdaptor.getDataStore().getActiveBroadcastCount();
-		});
+				.until(() -> {
+					return activeBroadcastCountFinal + 2 == appAdaptor.getDataStore().getActiveBroadcastCount();
+				});
 
 		if (activeBroadcastCount == 1) {
 			Mockito.verify(appAdaptor, timeout(1000)).stopStreaming(Mockito.any());
@@ -1645,15 +1834,15 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		when(stream.getAbsoluteStartTimeMs()).thenReturn(absoluteTimeMS);
 
 		Awaitility.await().atMost(5, TimeUnit.SECONDS).pollInterval(1, TimeUnit.SECONDS)
-		.until(() ->
-		appAdaptor.getDataStore().get(streamId).getAbsoluteStartTimeMs() == absoluteTimeMS);
+				.until(() ->
+						appAdaptor.getDataStore().get(streamId).getAbsoluteStartTimeMs() == absoluteTimeMS);
 
 		spyAdaptor.stopPublish(stream.getPublishedName());
 
 
 		Awaitility.await().atMost(5, TimeUnit.SECONDS).pollInterval(1, TimeUnit.SECONDS)
-		.until(() ->
-		appAdaptor.getDataStore().get(streamId) == null);
+				.until(() ->
+						appAdaptor.getDataStore().get(streamId) == null);
 
 
 	}
@@ -1665,7 +1854,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		Application app = (Application) applicationContext.getBean("web.handler");
 		AntMediaApplicationAdapter appAdaptor = Mockito.spy(app);
 
-		doReturn(new StringBuilder("")).when(appAdaptor).notifyHook(anyString(), anyString(), anyString(), anyString(), anyString(), anyString(), anyString(), anyString());
+		Mockito.doNothing().when(appAdaptor).notifyHook(anyString(), anyString(), anyString(), anyString(), anyString(), anyString(), anyString(), anyString());
 		assertNotNull(appAdaptor);
 
 		//just check below value that it is not null, this is not related to this case but it should be tested
@@ -1794,9 +1983,9 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 			int finalDuration = 20000;
 			Awaitility.await().atMost(10, TimeUnit.SECONDS).pollInterval(2, TimeUnit.SECONDS).until(() ->
-			MuxingTest.testFile(muxAdaptor.getMuxerList().get(0).getFile().getAbsolutePath(), finalDuration));
+					MuxingTest.testFile(muxAdaptor.getMuxerList().get(0).getFile().getAbsolutePath(), finalDuration));
 
-			assertEquals(0, MuxingTest.videoStartTimeMs);
+			assertEquals(1640, MuxingTest.videoStartTimeMs);
 			assertEquals(0, MuxingTest.audioStartTimeMs);
 
 		} catch (Exception e) {
@@ -1898,8 +2087,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 
 	@Test
-	public void testAddBufferQueue() 
-	{
+	public void testAddBufferQueue() {
 		appScope = (WebScope) applicationContext.getBean("web.scope");
 		MuxAdaptor muxAdaptor = Mockito.spy(MuxAdaptor.initializeMuxAdaptor(null, false, appScope));
 
@@ -1910,30 +2098,27 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		muxAdaptor.setBuffering(true);
 
-		for (int i = 0; i <= 11; i++) 
-		{
+		for (int i = 0; i <= 11; i++) {
 			ITag tag = mock(ITag.class);
-			when(tag.getTimestamp()).thenReturn(i*100);
+			when(tag.getTimestamp()).thenReturn(i * 100);
 			IStreamPacket pkt = new StreamPacket(tag);
 			muxAdaptor.addBufferQueue(pkt);
 			if (i < 11) {
 				assertTrue(muxAdaptor.isBuffering());
-			}
-			else if (i == 11) {
+			} else if (i == 11) {
 				assertFalse(muxAdaptor.isBuffering());
 			}
 		}
 
 
-		for (int i = 12; i <= 51; i++) 
-		{
+		for (int i = 12; i <= 51; i++) {
 			ITag tag = mock(ITag.class);
-			when(tag.getTimestamp()).thenReturn(i*100);
+			when(tag.getTimestamp()).thenReturn(i * 100);
 			IStreamPacket pkt = new StreamPacket(tag);
 			muxAdaptor.addBufferQueue(pkt);
 			long bufferedDuration = muxAdaptor.getBufferQueue().last().getTimestamp() - muxAdaptor.getBufferQueue().first().getTimestamp();
 			if (i < 51) {
-				assertEquals(i*100, bufferedDuration);
+				assertEquals(i * 100, bufferedDuration);
 			}
 		}
 
@@ -1966,8 +2151,6 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		ConcurrentSkipListSet<IStreamPacket> bufferQueue = muxAdaptor.getBufferQueue();
 		muxAdaptor.setBuffering(false);
-		AVStream stream = Mockito.mock(AVStream.class);
-		when(stream.time_base()).thenReturn(MuxAdaptor.TIME_BASE_FOR_MS);
 
 
 		ITag tag = mock(ITag.class);
@@ -2221,7 +2404,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 			if (checkDuration) {
 				int finalDuration = duration;
 				Awaitility.await().atMost(10, TimeUnit.SECONDS).pollInterval(2, TimeUnit.SECONDS).until(() ->
-				MuxingTest.testFile(muxAdaptor.getMuxerList().get(0).getFile().getAbsolutePath(), finalDuration));
+						MuxingTest.testFile(muxAdaptor.getMuxerList().get(0).getFile().getAbsolutePath(), finalDuration));
 			}
 			return muxAdaptor.getMuxerList().get(0).getFile();
 		} catch (Exception e) {
@@ -2287,12 +2470,13 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals(lastUpdateTime, broadcast2.getUpdateTime());
 
 
-		Awaitility.await().pollDelay(5100, TimeUnit.MILLISECONDS).atMost(6, TimeUnit.SECONDS).until(() -> {
-			muxAdaptor.updateStreamQualityParameters(streamId, null, 1.0123, 12120);
-			return true;
-		});
+		Awaitility.await().pollDelay(MuxAdaptor.STAT_UPDATE_PERIOD_MS + 1000, TimeUnit.MILLISECONDS)
+				.atMost(MuxAdaptor.STAT_UPDATE_PERIOD_MS * 2, TimeUnit.MILLISECONDS).until(() -> {
+					muxAdaptor.updateStreamQualityParameters(streamId, null, 1.0123, 12120);
+					return true;
+				});
 
-		Awaitility.await().atMost(3, TimeUnit.SECONDS).until(() -> {
+		Awaitility.await().atMost(MuxAdaptor.STAT_UPDATE_PERIOD_MS + 1000, TimeUnit.MILLISECONDS).until(() -> {
 			Broadcast broadcastTmp = muxAdaptor.getDataStore().get(streamId);
 			logger.info("speed: {}", broadcastTmp.getSpeed());
 			return "1.012".equals(Double.toString(broadcastTmp.getSpeed()));
@@ -2429,7 +2613,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		StorageClient client = Mockito.mock(AmazonS3StorageClient.class);
 		HLSMuxer hlsMuxerTester = new HLSMuxer(vertx, client, "streams", 1, null, false);
-		hlsMuxerTester.setHlsParameters(null, null, null, null, null);
+		hlsMuxerTester.setHlsParameters(null, null, null, null, null, null);
 		assertFalse(hlsMuxerTester.isUploadingToS3());
 
 
@@ -2551,7 +2735,8 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		try {
 			FileInputStream fis = new FileInputStream("src/test/resources/frame0");
-			byte[] byteArray = IOUtils.toByteArray(fis);
+
+			byte[] byteArray = fis.readAllBytes();
 
 			fis.close();
 
@@ -2572,10 +2757,10 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		mp4Muxer.writeTrailer();
 
 		Awaitility.await().atMost(20, TimeUnit.SECONDS)
-		.pollInterval(1, TimeUnit.SECONDS)
-		.until(() -> {
-			return MuxingTest.testFile("webapps/junit/streams/" + streamName + ".mp4", 10000);
-		});
+				.pollInterval(1, TimeUnit.SECONDS)
+				.until(() -> {
+					return MuxingTest.testFile("webapps/junit/streams/" + streamName + ".mp4", 10000);
+				});
 
 
 	}
@@ -2600,7 +2785,9 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		String streamName = "stream_name_" + (int) (Math.random() * 10000);
 		//init
 		hlsMuxer.init(appScope, streamName, 0, null, 0);
-
+		
+		hlsMuxer.setId3Enabled(true);
+		
 		//add stream
 		int width = 640;
 		int height = 480;
@@ -2619,7 +2806,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		try {
 			FileInputStream fis = new FileInputStream("src/test/resources/frame0");
-			byte[] byteArray = IOUtils.toByteArray(fis);
+			byte[] byteArray = fis.readAllBytes();
 
 			fis.close();
 
@@ -2696,7 +2883,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 		try {
 			FileInputStream fis = new FileInputStream("src/test/resources/frame0");
-			byte[] byteArray = IOUtils.toByteArray(fis);
+			byte[] byteArray = fis.readAllBytes();
 
 			fis.close();
 
@@ -2977,15 +3164,15 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 			//wait to let hls muxer delete ts and m3u8 file
 
 			Awaitility.await().atMost(hlsListSize * hlsTime * 1000 + 3000, TimeUnit.MILLISECONDS).pollInterval(1, TimeUnit.SECONDS)
-			.until(() -> {
-				File[] filesTmp = dir.listFiles(new FilenameFilter() {
-					@Override
-					public boolean accept(File dir, String name) {
-						return name.endsWith(".ts") || name.endsWith(".m3u8");
-					}
-				});
-				return 0 == filesTmp.length;
-			});
+					.until(() -> {
+						File[] filesTmp = dir.listFiles(new FilenameFilter() {
+							@Override
+							public boolean accept(File dir, String name) {
+								return name.endsWith(".ts") || name.endsWith(".m3u8");
+							}
+						});
+						return 0 == filesTmp.length;
+					});
 
 
 			assertFalse(hlsFile.exists());
@@ -3168,19 +3355,18 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 			assertTrue(files.length > 0);
 			assertTrue(files.length < (int) Integer.valueOf(hlsMuxer.getHlsListSize()) * (Integer.valueOf(hlsMuxer.getHlsTime()) + 1));
 
-
 			//wait to let hls muxer delete ts and m3u8 file
 
 			Awaitility.await().atMost(hlsListSize * hlsTime * 1000 + 3000, TimeUnit.MILLISECONDS).pollInterval(1, TimeUnit.SECONDS)
-			.until(() -> {
-				File[] filesTmp = dir.listFiles(new FilenameFilter() {
-					@Override
-					public boolean accept(File dir, String name) {
-						return name.endsWith(".ts") || name.endsWith(".m3u8");
-					}
-				});
-				return 0 == filesTmp.length;
-			});
+					.until(() -> {
+						File[] filesTmp = dir.listFiles(new FilenameFilter() {
+							@Override
+							public boolean accept(File dir, String name) {
+								return name.endsWith(".ts") || name.endsWith(".m3u8");
+							}
+						});
+						return 0 == filesTmp.length;
+					});
 
 
 		} catch (Exception e) {
@@ -3294,15 +3480,15 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 
 			//wait to let hls muxer delete ts and m3u8 file
 			Awaitility.await().atMost(hlsListSize * hlsTime * 1000 + 3000, TimeUnit.MILLISECONDS).pollInterval(1, TimeUnit.SECONDS)
-			.until(() -> {
-				File[] filesTmp = dir.listFiles(new FilenameFilter() {
-					@Override
-					public boolean accept(File dir, String name) {
-						return name.endsWith(".ts") || name.endsWith(".m3u8");
-					}
-				});
-				return 0 == filesTmp.length;
-			});
+					.until(() -> {
+						File[] filesTmp = dir.listFiles(new FilenameFilter() {
+							@Override
+							public boolean accept(File dir, String name) {
+								return name.endsWith(".ts") || name.endsWith(".m3u8");
+							}
+						});
+						return 0 == filesTmp.length;
+					});
 
 
 			assertFalse(hlsFile.exists());
@@ -3706,10 +3892,10 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		muxAdaptor.start();
 
 		Awaitility.await().atLeast(getAppSettings().getMaxAnalyzeDurationMS() * 2, TimeUnit.MILLISECONDS)
-		.atMost(getAppSettings().getMaxAnalyzeDurationMS() * 2 + 1000, TimeUnit.MILLISECONDS)
-		.until(() -> {
-			return muxAdaptor.isStopRequestExist();
-		});
+				.atMost(getAppSettings().getMaxAnalyzeDurationMS() * 2 + 1000, TimeUnit.MILLISECONDS)
+				.until(() -> {
+					return muxAdaptor.isStopRequestExist();
+				});
 
 		Mockito.verify(muxAdaptor, Mockito.timeout(500)).closeRtmpConnection();
 
@@ -3737,7 +3923,7 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		MuxAdaptor muxAdaptor = Mockito.spy(MuxAdaptor.initializeMuxAdaptor(null, false, appScope));
 		muxAdaptor.setBroadcast(broadcast);
 		muxAdaptor.init(appScope, streamId, false);
-		doNothing().when(muxAdaptor).updateQualityParameters(Mockito.anyLong(), any());
+		doNothing().when(muxAdaptor).updateQualityParameters(Mockito.anyLong(), any(), Mockito.eq(10), Mockito.eq(true));
 
 
 		IPacketListener listener = mock(IPacketListener.class);
@@ -3746,18 +3932,24 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 		verify(listener, Mockito.times(1)).setVideoStreamInfo(eq(muxAdaptor.getStreamId()), any());
 		verify(listener, Mockito.times(1)).setAudioStreamInfo(eq(muxAdaptor.getStreamId()), any());
 
-		AVStream stream = mock(AVStream.class);
-		AVCodecParameters codecParameters = mock(AVCodecParameters.class);
-		when(stream.codecpar()).thenReturn(codecParameters);
-		when(codecParameters.codec_type()).thenReturn(AVMEDIA_TYPE_VIDEO);
+		AVStream stream = new AVStream();
+		AVCodecParameters codecParameters = new AVCodecParameters();
+		stream.codecpar(codecParameters);
+		codecParameters.codec_type(AVMEDIA_TYPE_VIDEO);
 
-		AVPacket pkt = mock(AVPacket.class);
-		when(pkt.flags()).thenReturn(AV_PKT_FLAG_KEY);
+		AVPacket pkt = new AVPacket();
+		pkt.flags(AV_PKT_FLAG_KEY);
+
+		//inject time base to not encounter nullpointer
+		for (Muxer muxer : muxAdaptor.getMuxerList()) {
+			muxer.getInputTimeBaseMap().put(pkt.stream_index(), MuxAdaptor.TIME_BASE_FOR_MS);
+		}
+
 
 		muxAdaptor.writePacket(stream, pkt);
 		verify(listener, Mockito.times(1)).onVideoPacket(streamId, pkt);
 
-		when(codecParameters.codec_type()).thenReturn(AVMEDIA_TYPE_AUDIO);
+		codecParameters.codec_type(AVMEDIA_TYPE_AUDIO);
 		muxAdaptor.writePacket(stream, pkt);
 		verify(listener, Mockito.times(1)).onAudioPacket(streamId, pkt);
 
@@ -4043,6 +4235,41 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 	}
 
 	@Test
+	public void testID3Timing() {
+		HLSMuxer hlsMuxer = spy(new HLSMuxer(vertx, Mockito.mock(StorageClient.class),
+				"streams", 0, "http://example.com", false));
+		hlsMuxer.setId3Enabled(true);
+		hlsMuxer.createID3StreamIfRequired();
+		long lastPts = RandomUtils.nextLong();
+		doReturn(lastPts).when(hlsMuxer).getLastPts();
+
+		doNothing().when(hlsMuxer).writeDataFrame(any(), any());
+		String data = "test data";
+		hlsMuxer.addID3Data(data);
+		ArgumentCaptor<AVPacket> argument = ArgumentCaptor.forClass(AVPacket.class);
+
+		verify(hlsMuxer, times(1)).writeDataFrame(argument.capture(), any());
+
+		AVPacket pkt = argument.getValue();
+
+		BytePointer ptrData = pkt.data();
+		byte[] id3Data = new byte[pkt.size()];
+		ptrData.get(id3Data);
+
+		assertEquals("ID3", new String(id3Data, 0, 3));
+		assertEquals("TXXX", new String(id3Data, 10, 4));
+
+		assertEquals(lastPts, pkt.pts());
+		assertEquals(lastPts, pkt.dts());
+		
+		
+		HLSMuxer.logError(-1, "test error message", "stream1");
+		HLSMuxer.logError(0, "test error message", "stream1");
+		HLSMuxer.logError(1, "test error message", "stream1");
+
+	}
+
+	@Test
 	public void testMuxAdaptorPipeReader() {
 
 
@@ -4060,14 +4287,48 @@ public class MuxerUnitTest extends AbstractJUnit4SpringContextTests {
 			muxAdaptor.debugSetStopRequestExist(true);
 			muxAdaptor.execute();
 			fail("It should throw exception");
-		}
-		catch (Exception e) {
+		} catch (Exception e) {
 
 		}
 
 		assertFalse(muxAdaptor.getIsPipeReaderJobRunning().get());
 
 
+	}
 
+	@Test
+	public void testAddH264MetadataBSF() {
+		if (appScope == null) {
+			appScope = (WebScope) applicationContext.getBean("web.scope");
+			logger.debug("Application / web scope: {}", appScope);
+			assertTrue(appScope.getDepth() == 1);
+		}
+
+		HLSMuxer hlsMuxer = new HLSMuxer(vertx, Mockito.mock(StorageClient.class), "streams", 0, "http://example.com", false);
+		hlsMuxer.setHlsParameters(null, null, null, null, null);
+		hlsMuxer.init(appScope, "test", 0, null, 0);
+
+		hlsMuxer.setSeiEnabled(true);
+		int width = 640;
+		int height = 480;
+
+		boolean addStreamResult = hlsMuxer.addVideoStream(width, height, null, AV_CODEC_ID_H264, 0, false, null);
+
+		assertTrue(addStreamResult);
+
+		assertEquals("h264_metadata", hlsMuxer.getBitStreamFilter());
+
+	}
+
+	@Test
+	public void testSetSEIData() {
+		appScope = (WebScope) applicationContext.getBean("web.scope");
+		ClientBroadcastStream clientBroadcastStream = new ClientBroadcastStream();
+		MuxAdaptor muxAdaptorReal = MuxAdaptor.initializeMuxAdaptor(clientBroadcastStream, false, appScope);
+		HLSMuxer hlsMuxer = mock(HLSMuxer.class);
+		muxAdaptorReal.getMuxerList().add(hlsMuxer);
+		String data = "some data to put frame";
+		muxAdaptorReal.addSEIData(data);
+		verify(hlsMuxer, times(1)).setSeiData(data);
 	}
 }
